--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -2,9 +2,34 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: left;
+    padding-top: 20px;
 }
 
 .navbar__item {
     flex-basis: 20%;
     list-style-type: none;
+    color:black;
+    padding: 30px;
+    font-size: 20px;
+}
+
+.nav-link {
+    display: inline-block;
+    padding: .5em 2.5em;
+    background: #fff;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: bold;
+    transition: transform 200ms ease-in-out;
+    border: 2px solid orange;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.nav-link:hover {
+    transform: scale(1.1);
 }
