--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -3,6 +3,8 @@
     flex-wrap: nowrap;
     justify-content: left;
     padding-top: 20px;
+    border: 5px solid maroon;
+    background-color: rgb(206, 173, 112);
 }
 
 .navbar__item {
@@ -11,6 +13,7 @@
     color:black;
     padding: 30px;
     font-size: 20px;
+    
 }
 
 .nav-link {
